--- a/rollup/core/classes/RollupEvaluator.cls
+++ b/rollup/core/classes/RollupEvaluator.cls
@@ -248,7 +248,14 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
       } catch (Exception ex) {
         this.logError(ex);
         RollupLogger.Instance.save();
-        throw new IllegalArgumentException('Where clause entered incorrectly: ' + whereClause);
+        throw new IllegalArgumentException(
+          'Where clause entered incorrectly: ' +
+          whereClause +
+          '\nException: ' +
+          ex.getMessage() +
+          '\n' +
+          ex.getStackTraceString()
+        );
       }
     }
 
@@ -287,7 +294,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
         String potentialNestedConditional = localSplitWheres[index].trim();
         Integer originalMatchIndex = index;
         Integer openParansRange = potentialNestedConditional.indexOf('(');
-        if (openParansRange == 0) {
+        if (openParansRange == 0 && potentialNestedConditional.length() > 1) {
           // remove the parans now
           potentialNestedConditional = potentialNestedConditional.substring(1, potentialNestedConditional.length() - 1);
           // iterate through the rest of the list, stopping at the end of the parantheses
@@ -729,7 +736,7 @@ public without sharing abstract class RollupEvaluator implements Rollup.Evaluato
   }
 
   private static void addFinestLog(Type clazz, Boolean matches, Object item) {
-    RollupLogger.Instance.log(clazz.getName() + ' matches? '+ matches + ' for: ' + item, LoggingLevel.FINEST);
+    RollupLogger.Instance.log(clazz.getName() + ' matches? ' + matches + ' for: ' + item, LoggingLevel.FINEST);
   }
 
   @TestVisible
