Stellar code review feedback from @jongpie yielded some additional test class clarity - adding comments where necessary, improved the overall quality of RollupQueryBuilderTests, fixed an additional issue with COUNT_DISTINCT where nulls could be counted inadvertently, and swept up some commented out code.

--- a/extra-tests/classes/InvocableDrivenTests.cls
+++ b/extra-tests/classes/InvocableDrivenTests.cls
@@ -1,6 +1,5 @@
 @IsTest
 private class InvocableDrivenTests {
-
   @TestSetup
   static void setup() {
     upsert new RollupSettings__c(IsEnabled__c = true);
@@ -35,6 +34,8 @@ private class InvocableDrivenTests {
 
     Test.startTest();
     insert matchesFlow;
+    acc = [SELECT Site FROM Account];
+    System.assertEquals(matchesFlow.Description, acc.Site, 'Should have updated account while still a match');
     matchesFlow.Subject = 'Now not a match';
     update matchesFlow;
     Test.stopTest();
